more succinct values

--- a/web_client/stylesheets/panels/overlayPropertiesWidget.styl
+++ b/web_client/stylesheets/panels/overlayPropertiesWidget.styl
@@ -30,7 +30,7 @@
 #h-overlay-offset-group
   label
     float left
-    margin 5px 5px
+    margin 5px
 
   label:first-child
     display block
@@ -39,5 +39,5 @@
   span
     display block
     overflow hidden
-    padding 0 5px 0 5px
+    padding 0 5px
     margin 0 0 5px
