--- a/web_client/templates/dialogs/saveOverlay.pug
+++ b/web_client/templates/dialogs/saveOverlay.pug
@@ -22,7 +22,7 @@
           textarea#h-overlay-description.form-control.input-sm(
             rows='6', placeholder='Enter an optional description')
             | #{description}
-        .g-validation-failed-message.hidden
+        .overlay.g-validation-failed-message.hidden
       .modal-footer
         button.btn.btn-small.btn-default.h-cancel(type='button', data-dismiss='modal') Cancel
         button.btn.btn-small.btn-primary.h-submit(type='submit') Save
